# near-evm

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build.sh  build_symbols.sh  mike-hack.sh
benches/: basic.rs
contracts/: ECDSA.sol
examples/1-uniswap/: README.md  package-lock.json  package.json  truffle-config.js
examples/1-uniswap/contracts/: FunToken.sol
examples/1-uniswap/migrations/: 2_funtoken.js
res/: near_evm.wasm
src/: builtins.rs  evm_state.rs  fake_ext.rs  interpreter.rs  lib.rs  near_backend.rs  near_ext.rs  near_native.rs  precompiles.rs  runner.rs  sdk.rs  stack.rs  types.rs  utils.rs
src/backend/: memory.rs  mod.rs
src/evm_core/: error.rs  memory.rs  mod.rs  stack.rs  valids.rs
src/evm_core/eval/: arithmetic.rs  bitwise.rs  misc.rs  mod.rs
src/runtime/: evm_machine.rs  handler.rs  interrupt.rs  mod.rs
src/runtime/eval/: macros.rs  mod.rs  system.rs
src/tests/: benchmark.js  build.sh  build_w_solc.sh  build_w_truffle.sh  config.js  cryptokitties.rs  cryptozombies.rs  mod.rs  near_stubs.rs  package-lock.json  test_utils.rs  truffle.rs
src/tests/contracts/: ERC20.sol  Precompiles.sol  SolTests.sol  TestPrecompiles.sol  ZombieAttack.sol
tests/: benchmark.js  benchmark.rs  build.sh  cryptozombies_rpc.rs  package-lock.json  package.json  rpc_user.rs  test-environment.config.js  test_backend.rs  test_runner.rs  test_upgrade.rs
tests/benchmark/: Benchmark.sol  ganache.sh
tests/contracts/: BColor.sol  BConst.sol  BFactory.sol  BMath.sol  BNum.sol  BPool.sol  BToken.sol  ConstructorRevert.sol  Create2.sol  Fibonacci.sol  Loop.sol  SafeMath.sol  SolTests.sol  StandardPrecompiles.sol  TToken.sol  ZombieAttack.sol
