[package]
name = "near-evm"
edition = "2018"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
license = "GPL-3.0"
description = "EVM interpreter as a NEAR smart contract"
publish = false

[dependencies]
evm = { git = "https://github.com/paritytech/parity-ethereum", rev = "eed630a002bbebed3a3097127f2483213ff52079" }
vm = { git = "https://github.com/paritytech/parity-ethereum", rev = "eed630a002bbebed3a3097127f2483213ff52079" }
parity-bytes = "0.1.0"
ethereum-types = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
hex = "0.3.2"
near-sdk = { git = "https://github.com/near/near-sdk-rs", branch = "storage_write_log" }
borsh = "0.6.0"
rlp = "0.4.2"
keccak-hash = "0.2.0"

[dev-dependencies]
lazy_static = "1.4"
ethabi = "8.0.0"
ethabi-contract = "8.0.0"
ethabi-derive = "8.0.0"
protobuf = "2.4"
near-jsonrpc-client = { git = "https://github.com/nearprotocol/nearcore", branch = "master" }
near-primitives = { git = "https://github.com/nearprotocol/nearcore", branch = "master" }
near-crypto = { git = "https://github.com/nearprotocol/nearcore", branch = "master" }
near-testlib = { git = "https://github.com/nearprotocol/nearcore", branch = "master", package = "testlib" }
actix = "0.9"
futures = "0.3"
lazy-static-include = "2.2.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[features]
default = []
