[package]
name = "near-evm"
edition = "2018"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
license = "Apache2"
description = "EVM interpreter as a NEAR smart contract"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
debug-assertions = false

[features]
default = ["std"]
std = ["primitive-types/std", "rlp/std", "sha3/std", "borsh/std"]
contract = []
external_evm_machine = []

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false }
borsh = { version = "0.8.1", default-features = false }
primitive-types = { version = "0.8.0", default-features = false, features = ["rlp"] }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.8", default-features = false }

[dev-dependencies]
hex = "0.4.2"
ethabi = { git = "https://github.com/rust-ethereum/ethabi", rev = "649d11774b43b33a9c3c4570401886698885e8b7" }
ethabi-contract = { git = "https://github.com/rust-ethereum/ethabi", rev = "649d11774b43b33a9c3c4570401886698885e8b7" }
ethabi-derive = { git = "https://github.com/rust-ethereum/ethabi", rev = "649d11774b43b33a9c3c4570401886698885e8b7" }
# near-sdk-sim = { git = "https://github.com/near/near-sdk-rs", tag = "2.4.0" }
